--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @import "uploadthing/tw/v4";
+@source "../node_modules/streamdown/dist/index.js";
 @source "../node_modules/@uploadthing/react/dist";
 @plugin "@tailwindcss/typography";
 
